cluster/apps/mediaserver/radarr-uhd/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: radarr-uhd
  namespace: mediaserver
spec:
  hosts:
  - radarr-uhd.milton.mcf.io
  gateways:
  - istio-ingress/cluster-ingress-gateway
  http:
  - route:
    - destination:
        port:
          number: 7878
        host: radarr-uhd.mediaserver.svc.cluster.local
